# prompt-linter

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/: main.py
tests/: test_smoke.py
