[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-linter"
version = "0.1.0"
description = "Lint prompts and system instructions for quality risks"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
prompt-linter = "prompt_linter.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
